force-app/main/default/objects/SharePoint_Configuration__c/SharePoint_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SharePoint Configuration</label>
</CustomObject>