force-app/main/default/objects/SharePoint_Configuration__c/fields/APP_DOMAIN__c.field-meta.xml
<CustomField>
    <fullName>APP_DOMAIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>APP_DOMAIN</label>
    <type>TextArea</type>
</CustomField>