force-app/main/default/objects/SharePoint_Configuration__c/fields/CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CLIENT_ID</label>
    <type>TextArea</type>
</CustomField>