force-app/main/default/objects/SharePoint_Configuration__c/fields/CLIENT_SECRET__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_SECRET__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CLIENT_SECRET</label>
    <type>TextArea</type>
</CustomField>