force-app/main/default/objects/SharePoint_Configuration__c/fields/FOLDER_NAME__c.field-meta.xml
<CustomField>
    <fullName>FOLDER_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FOLDER_NAME</label>
    <type>TextArea</type>
</CustomField>