force-app/main/default/objects/SharePoint_Configuration__c/fields/SITE_URL__c.field-meta.xml
<CustomField>
    <fullName>SITE_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SITE_URL</label>
    <type>TextArea</type>
</CustomField>