force-app/main/default/objects/SharePoint_Configuration__c/fields/SUBFOLDER_NAME__c.field-meta.xml
<CustomField>
    <fullName>SUBFOLDER_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SUBFOLDER_NAME</label>
    <type>TextArea</type>
</CustomField>