force-app/main/default/objects/SharePoint_Configuration__c/fields/TENANT_ID__c.field-meta.xml
<CustomField>
    <fullName>TENANT_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TENANT_ID</label>
    <type>TextArea</type>
</CustomField>