force-app/main/default/objects/SharePoint_Configuration__c/fields/TENANT_NAME__c.field-meta.xml
<CustomField>
    <fullName>TENANT_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TENANT_NAME</label>
    <type>TextArea</type>
</CustomField>